--- a/Penpal/it.lproj/Localizable.strings
+++ b/Penpal/it.lproj/Localizable.strings
@@ -1,11 +1,11 @@
-//
-//  Untitled.swift
-//  Penpal
-//
-//  Created by Austin William Tucker on 1/24/25.
-//
+/*
+  Untitled.swift
+  Penpal
 
-//MARK: -  Topic Centric
+  Created by Austin William Tucker on 1/24/25.
+*/
+
+/* MARK: -  Topic Centric */
 "travel" = "Viaggio";
 "sports" = "Sport";
 "culture" = "Cultura";
@@ -14,7 +14,7 @@
 "work" = "Lavoro";
 "art" = "Arte";
 
-//MARK: -  Profile Centric
+/* MARK: -  Profile Centric */
 "email" = "E-mail";
 "phone_number" = "Numero di telefono";
 "description" = "Descrizione";
@@ -25,14 +25,14 @@
 "proficiency" = "Livello di competenza";
 "goals" = "Obiettivi";
 
-//MARK: -  Meeting Centric
+/* MARK: -  Meeting Centric */
 "title" = "Titolo";
 "description" = "Descrizione";
 "link" = "Link della riunione";
 "status" = "Stato";
 "participants" = "Partecipanti";
 
-//MARK: -  Months
+/* MARK: -  Months */
 "january" = "Gennaio";
 "february" = "Febbraio";
 "march" = "Marzo";
@@ -46,7 +46,7 @@
 "november" = "Novembre";
 "december" = "Dicembre";
 
-//MARK: - Days of the Week
+/* MARK: - Days of the Week */
 "monday" = "Lunedì";
 "tuesday" = "Martedì";
 "wednesday" = "Mercoledì";
@@ -55,35 +55,35 @@
 "saturday" = "Sabato";
 "sunday" = "Domenica";
 
-//MARK: - Tab Names
+/* MARK: - Tab Names */
 "home_tab" = "Home";
 "study_tab" = "Studio";
 "penpal_tab" = "Penpal";
 "profile_tab" = "Profilo";
 "messages_tab" = "Messaggi";
 
-// MARK: - Calendar and Schedule
+/* MARK: - Calendar and Schedule */
 "calendar" = "Calendario";
 "schedule" = "Programma";
 "pending" = "In sospeso";
 "accepted" = "Accettato";
 "declined" = "Rifiutato";
 
-// MARK: - Date And Time
+/* MARK: - Date And Time */
 "date" = "Data";
 "time" = "Ora";
 
-// MARK: - Hobbies Or Interests
+/* MARK: - Hobbies Or Interests */
 "interests" = "Interessi";
 "music" = "Musica";
 "reading" = "Lettura";
 "tech" = "Tecnologia";
 "writing" = "Scrittura";
 
-// MARK: - Greetings
+/* MARK: - Greetings */
 "hey" = "Ciao";
 
-// MARK: - Welcome Page Centric
+/* MARK: - Welcome Page Centric */
 "askEmail" = "Qual è il tuo indirizzo e-mail?";
 "askName" = "Qual è il tuo nome?";
 "askTimeZone" = "Qual è il tuo fuso orario?";
