--- a/Penpal/ko.lproj/Localizable.strings
+++ b/Penpal/ko.lproj/Localizable.strings
@@ -1,11 +1,11 @@
-//
-//  Untitled.swift
-//  Penpal
-//
-//  Created by Austin William Tucker on 1/24/25.
-//
+/*
+  Untitled.swift
+  Penpal
 
-//MARK: -  Topic Centric
+  Created by Austin William Tucker on 1/24/25.
+*/
+
+/* MARK: -  Topic Centric */
 "travel" = "여행";
 "sports" = "스포츠";
 "culture" = "문화";
@@ -14,7 +14,7 @@
 "work" = "직장";
 "art" = "예술";
 
-//MARK: -  Profile Centric
+/* MARK: -  Profile Centric */
 "email" = "이메일";
 "phone_number" = "전화번호";
 "description" = "설명";
@@ -25,14 +25,14 @@
 "proficiency" = "실력";
 "goals" = "목표";
 
-//MARK: -  Meeting Centric
+/* MARK: -  Meeting Centric */
 "title" = "제목";
 "description" = "설명";
 "link" = "회의 링크";
 "status" = "상태";
 "participants" = "참석자";
 
-//MARK: -  Months
+/* MARK: -  Months */
 "january" = "1월";
 "february" = "2월";
 "march" = "3월";
@@ -46,7 +46,7 @@
 "november" = "11월";
 "december" = "12월";
 
-//MARK: -  Days of the Week
+/* MARK: - Days of the Week */
 "monday" = "월요일";
 "tuesday" = "화요일";
 "wednesday" = "수요일";
@@ -55,36 +55,35 @@
 "saturday" = "토요일";
 "sunday" = "일요일";
 
-// MARK: - Tab Names
+/* MARK: - Tab Names */
 "home_tab" = "홈";
 "study_tab" = "학습";
 "penpal_tab" = "펜팔";
 "profile_tab" = "프로필";
 "messages_tab" = "메시지";
 
-// MARK: - Calendar and Schedule
+/* MARK: - Calendar and Schedule */
 "calendar" = "캘린더";
 "schedule" = "일정";
 "pending" = "대기 중";
 "accepted" = "수락됨";
 "declined" = "거절됨";
 
-// MARK: - Date And Time
+/* MARK: - Date And Time */
 "date" = "날짜";
 "time" = "시간";
 
-// MARK: - Hobbies Or Interests
+/* MARK: - Hobbies Or Interests */
 "interests" = "관심사";
 "music" = "음악";
 "reading" = "독서";
 "tech" = "기술";
 "writing" = "글쓰기";
 
-// MARK: - Greetings
+/* MARK: - Greetings */
 "hey" = "안녕";
 
-
-// MARK: - Welcome Page Centric
+/* MARK: - Welcome Page Centric */
 "askEmail" = "이메일 주소가 무엇인가요?";
 "askName" = "이름이 무엇인가요?";
 "askTimeZone" = "시간대는 무엇인가요?";
